Fixed horizontal scroll bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,7 @@ body {
 
 body {
   font-size: 11px;
+  margin: 0;
   font-style: normal;
   line-height: 1.5;
   background-color: $backgroundColor;
